# qvest

./: README.md  google-slides-script.gs  index.html  presentation.md  pyproject.toml
assets/: production-ai-architecture.dot
backend/: agent_state.py  app.py  chat_memory.py  chat_utils.py  data_loader.py  labels.py  recommender.py  scoring.py
backend/agents/: __init__.py  engine.py  prompts.py  router.py  utils.py
backend/tools/: __init__.py  availability.py  holds.py  reading_history.py  router.py  series_author.py  student_snapshot.py
data/: agent_capabilities.json  agent_state.json  catalog.csv  loans.csv  students.csv
frontend/: agents.html  analytics.html  analytics.js  app.js  availability.html  availability.js  chatbot.html  chatbot.js  concierge.html  gaps.html  home.html  index.html  onboarding.js  styles.css
qvest/: .gitignore
qvest/assets/: QVest Reading Momentum POC.pptx  agentic-tools-architecture.dot  production-ai-architecture-simple.dot
qvest/backend/: app.py  chat_utils.py  recommender.py
qvest/backend/agents/: models.py  prompts.py  router.py  utils.py
qvest/backend/tools/: availability.py  onboarding.py  router.py
qvest/data/: agent_state.json  loans.csv
qvest/frontend/: analytics.html  app.js  availability.html  concierge.js  feedback.html  feedback.js  gaps.js  holds.html  holds.js  onboarding.html
