[project]
name = "qvest"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Franco",email = "gfranco008@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.29.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
